tra-package/main/default/objects/Trigger_Risk_Rule__mdt/Trigger_Risk_Rule__mdt.object-meta.xml
<CustomObject>
    <description>Defines risk detection rules for Apex triggers</description>
    <label>Trigger Risk Rule</label>
    <pluralLabel>Trigger Risk Rules</pluralLabel>
</CustomObject>