tra-package/main/default/objects/Trigger_Risk_Rule__mdt/fields/Detection_Mode__c.field-meta.xml
<CustomField>
    <fullName>Detection_Mode__c</fullName>
    <label>Detection Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>REGEX</fullName>
                <default>true</default>
                <label>REGEX</label>
            </value>
            <value>
                <fullName>ENGINE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>