tra-package/main/default/objects/Trigger_Risk_Rule__mdt/fields/Pattern__c.field-meta.xml
<CustomField>
    <fullName>Pattern__c</fullName>
    <label>Pattern</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>