tra-package/main/default/objects/Trigger_Risk_Rule__mdt/fields/Rule_Key__c.field-meta.xml
<CustomField>
    <fullName>Rule_Key__c</fullName>
    <label>Rule Key</label>
    <length>100</length>
    <type>Text</type>
</CustomField>